[package]
name = "bcachefs-top"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "A top-like tool for bcachefs statistics"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29.0"
nix = { version = "0.30.1", features = ["fs", "ioctl"]}
